<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/imgQR"
        android:layout_width="278dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/codigoqr" />

    <ImageView
        android:id="@+id/imgBarras"
        android:layout_width="278dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEscanear"
        app:srcCompat="@drawable/codigodebarras" />

    <ImageView
        android:id="@+id/imgGenQR"
        android:layout_width="278dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScanBaras"
        app:srcCompat="@drawable/generarqr" />

    <TextView
        android:id="@+id/tvEscanear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/escanear_qr"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgQR" />

    <TextView
        android:id="@+id/tvScanBaras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoLink="web"
        android:text="@string/escanear_codigo_de_barras"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBarras" />

    <TextView
        android:id="@+id/tvGenQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/generar_qr"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGenQR" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:hint="@string/introduzca_11_numeros"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/introduzca_lo_que_desee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bntSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/salir"
        app:backgroundTint="#F10000"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bntGen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bntGen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>